Update to use namespaced package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ansi",
+  "name": "@grapevine/ansi",
   "version": "1.0.0",
   "description": "Parse ANSI escape codes",
   "main": "index.js",
